<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:srcCompat="@drawable/mercurial_black" />

    <TextView
        android:id="@+id/name"
        style="@style/TextViewLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nike Mercurial CR7" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:progressBackgroundTint="@color/blue"
        android:progressTint="@color/yellow"
        android:secondaryProgressTint="@color/yellow" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/su4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/su4"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/su5"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/su5"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/su6"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#009688"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/su6"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:text="$100"
        android:textSize="34sp" />

    <Button
        android:id="@+id/borrow"
        style="@style/ButtonBorrow"
        android:layout_gravity="center"
        android:text="@string/borrow" />

    <Button
        android:id="@+id/next"
        style="@style/Next"
        android:layout_gravity="center"
        android:text="@string/next" />

</LinearLayout>